[project]
name = "flask-validate"
version = "0.1.0"
description = "Lightweight validation for Flask request args and form data"
authors = [{name="Blaine Wilson", email="blainekwilson@gmail.com"}]
maintainers = [{name="Blaine Wilson", email="blainekwilson@gmail.com"}]
dependencies = ["flask"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"